--- a/app/design/frontend/meanbee/default/template/review/product/view/list.phtml
+++ b/app/design/frontend/meanbee/default/template/review/product/view/list.phtml
@@ -56,7 +56,7 @@
                     </tbody>
                 </table>
                 <?php endif; ?>
-                <div itemprop="reviewRating" itemscope itemtype="http://schema.org/Rating"><meta itemprop="worstRating" content = "20"><span itemprop="ratingValue"><?php echo round($percentage / count($_votes), 0); ?></span>/<span itemprop="bestRating">100</span></div>
+                <div class="review-rating-summary" itemprop="reviewRating" itemscope itemtype="http://schema.org/Rating"><meta itemprop="worstRating" content = "20"><span itemprop="ratingValue"><?php echo round($percentage / count($_votes), 0); ?></span>/<span itemprop="bestRating">100</span></div>
                 <p itemprop="reviewBody"><?php echo nl2br($this->htmlEscape($_review->getDetail())) ?></p>
                 <small class="date"><?php $date = $this->formatDate($_review->getCreatedAt());
                 echo $this->__('(Posted on <meta itemprop="datePublished" content="%s">%s)', $date, $date, 'long') ?></small>
