--- a/skin/frontend/meanbee/default/css/styles.css
+++ b/skin/frontend/meanbee/default/css/styles.css
@@ -10,6 +10,8 @@ textarea {
   resize: vertical; }
 
 ::selection, ::-moz-selection {
+  background: #000;
+  color: #fff;
   text-shadow: none; }
 
 html {
@@ -29,7 +31,7 @@ a {
 /* Headings ===================================================================== */
 h1, h2, h3,
 h4, h5, h6 {
-  color: #0a263c;
+  color: #000;
   font-weight: bold;
   line-height: 1.35;
   margin: 0 0 5px; }
@@ -2073,13 +2075,13 @@ tr.summary-details-excluded {
         display: none !important; }
 
 .product-essential {
-  background: white url(../images/bkg_product-view.gif) no-repeat 100% 0;
-  padding: 25px; }
+  background: #fff;
+  padding: 25px 25px 25px 0; }
   .product-essential h2 {
     font: bold 1.083em/1.35 Arial, Helvetica, sans-serif; }
 
 .product-collateral {
-  padding: 25px; }
+  padding: 25px 25px 25px 0; }
   .product-collateral h2 {
     font-weight: bold;
     font-size: 1.25em;
@@ -2157,7 +2159,7 @@ tr.summary-details-excluded {
     float: left;
     margin: 0 0 8px 9px; }
   .product-view .product-img-box .more-views li a {
-    border: 2px solid #ddd;
+    border: 1px solid #ddd;
     float: left;
     height: 56px;
     overflow: hidden;
@@ -2205,7 +2207,6 @@ tr.summary-details-excluded {
 .product-view .product-shop .availability {
   margin: 10px 0; }
 .product-view .product-shop .short-description {
-  background: url(../images/bkg_divider1.gif) repeat-x 0 0;
   margin: 10px 0;
   padding: 10px 0 0; }
 .product-view .product-shop .price-box {
@@ -2221,10 +2222,8 @@ tr.summary-details-excluded {
 
 /* Product Options */
 .product-options {
-  background-color: #f6f6f6;
-  border: 1px solid #e4e4e4;
   margin: 20px 0 0;
-  padding: 10px 15px 20px;
+  padding: 10px 0;
   position: relative; }
   .product-options dl.last dd.last {
     border-bottom: 0;
@@ -2297,9 +2296,6 @@ tr.summary-details-excluded {
     top: 20px; }
 
 .product-options-bottom {
-  background-color: #fffada;
-  border: 1px solid #e4e4e4;
-  border-top: 0;
   padding: 15px 20px; }
   .product-options-bottom .product-pricing, .product-options-bottom .tier-prices {
     border: 0;
@@ -2367,12 +2363,8 @@ tr.summary-details-excluded {
   padding: 0;
   margin: 0 0 8px; }
 .product-view .box-up-sell .products-grid {
-  border: 1px solid #e5dcc3;
   width: 100%; }
   .product-view .box-up-sell .products-grid td {
-    background: #f6f2e7;
-    border-right: 1px solid #e5dcc3;
-    border-bottom: 1px solid #e5dcc3;
     line-height: 1.6em;
     padding: 15px 10px 12px;
     width: 25%; }
@@ -2380,13 +2372,8 @@ tr.summary-details-excluded {
     border-right: 0; }
   .product-view .box-up-sell .products-grid tr.last td {
     border-bottom: 0; }
-  .product-view .box-up-sell .products-grid td img {
-    border: 1px solid #e5dcc3; }
   .product-view .box-up-sell .products-grid .product-image {
     text-align: center; }
-  .product-view .box-up-sell .products-grid td.empty {
-    background: #f1ecdb;
-    border-right: 0; }
   .product-view .box-up-sell .products-grid .ratings .rating-box {
     display: block;
     float: none;
