[In Progress: 31] Initial commit of remove.phtml in wishlist account and removed background styles from wishlist table

--- a/skin/frontend/meanbee/default/css/_account.scss
+++ b/skin/frontend/meanbee/default/css/_account.scss
@@ -203,6 +203,9 @@
     .buttons-set { margin-top: 2em;
         button.button { float: none; }
     }
+    .data-table {
+        tbody tr { background: none; border-bottom: 1px solid #eee; }
+    }
 }
 #wishlist-table .add-to-links { white-space: nowrap; }
 
