--- a/app/design/frontend/meanbee/default/template/wishlist/item/column/remove.phtml
+++ b/app/design/frontend/meanbee/default/template/wishlist/item/column/remove.phtml
@@ -25,5 +25,4 @@
  */
 
 ?>
-<a href="<?php echo $this->getItemRemoveUrl($this->getItem()); ?>" onclick="return confirmRemoveWishlistItem();" title="<?php echo $this->__('Remove Item') ?>"
-    class="btn-remove btn-remove2"><?php echo $this->__('Remove item');?></a>
+<a href="<?php echo $this->getItemRemoveUrl($this->getItem()); ?>" onclick="return confirmRemoveWishlistItem();" title="<?php echo $this->__('Remove Item') ?>"><?php echo $this->__('Remove item');?></a>
