Moved price block from cart column to image column in wishlist table

--- a/app/design/frontend/meanbee/default/template/wishlist/item/column/image.phtml
+++ b/app/design/frontend/meanbee/default/template/wishlist/item/column/image.phtml
@@ -31,3 +31,4 @@ $product = $item->getProduct();
 <a class="product-image" href="<?php echo $this->getProductUrl($item) ?>" title="<?php echo $this->escapeHtml($product->getName()) ?>">
     <img src="<?php echo $this->helper('catalog/image')->init($product, 'small_image')->resize(113, 113); ?>" width="113" height="113" alt="<?php echo $this->escapeHtml($product->getName()) ?>" />
 </a>
+<?php echo $this->getPriceHtml($product);?>
