--- a/app/design/frontend/meanbee/default/template/wishlist/item/column/cart.phtml
+++ b/app/design/frontend/meanbee/default/template/wishlist/item/column/cart.phtml
@@ -44,6 +44,7 @@ $product = $item->getProduct();
     <?php endif; ?>
 <?php endif; ?>
 </div>
+<a href="<?php echo $this->getItemRemoveUrl($this->getItem()); ?>" onclick="return confirmRemoveWishlistItem();" title="<?php echo $this->__('Remove Item') ?>"><?php echo $this->__('Remove item');?></a>
 <?php foreach($this->getSortedChildren() as $childName):?>
     <?php echo $this->getChildHtml($childName, false);?>
 <?php endforeach;?>
