Removed background hover on even rows in wishlist table

--- a/skin/frontend/meanbee/default/css/styles.css
+++ b/skin/frontend/meanbee/default/css/styles.css
@@ -3653,6 +3653,8 @@ tr.summary-details-excluded {
 .my-wishlist .data-table tbody tr {
   background: none;
   border-bottom: 1px solid #eee; }
+.my-wishlist .data-table tr.even:hover {
+  background: none; }
 
 #wishlist-table .add-to-links {
   white-space: nowrap; }
