--- a/skin/frontend/meanbee/default/css/_account.scss
+++ b/skin/frontend/meanbee/default/css/_account.scss
@@ -205,6 +205,7 @@
     }
     .data-table {
         tbody tr { background: none; border-bottom: 1px solid #eee; }
+        tr.even:hover { background: none; }
     }
 }
 #wishlist-table .add-to-links { white-space: nowrap; }
