--- a/app/design/frontend/meanbee/default/template/checkout/onepage/review/totals.phtml
+++ b/app/design/frontend/meanbee/default/template/checkout/onepage/review/totals.phtml
@@ -30,7 +30,8 @@
 ?>
 <?php if ($this->getTotals()): ?>
 <tfoot>
-    <?php $_colspan = $this->helper('tax')->displayCartBothPrices() ? 5 : 3; ?>
+    <?php /* Changed expression from 5 : 3 to 6 : 4 to accomodate extra td in table for image */ ?>
+    <?php $_colspan = $this->helper('tax')->displayCartBothPrices() ? 6 : 4; ?>
     <?php echo $this->renderTotals(null, $_colspan); ?>
     <?php echo $this->renderTotals('footer', $_colspan); ?>
     <?php if ($this->needDisplayBaseGrandtotal()):?>
