--- a/skin/frontend/meanbee/default/css/styles.scss
+++ b/skin/frontend/meanbee/default/css/styles.scss
@@ -292,7 +292,7 @@ p.required { color: #EB340A; font-size: em(11); text-align: right; }
 }
 
 .subtitle,
-.sub-title { clear: both; color: #e25203; font-size: em(15); font-weight: bold; margin: 0 0 6px; padding: 15px 0 0; }
+.sub-title { clear: both; font-size: em(15); font-weight: bold; margin: 0 0 6px; padding: 15px 0 0; }
 /* =============================================================================== */
 
 /* Pager ========================================================================= */
